--- a/react-redraft/weekly.html
+++ b/react-redraft/weekly.html
@@ -1,14 +1,13 @@
-<!-- /weekly.html -->
+<!-- /weekly.html (at repo root) -->
 <!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Weekly Whiteboard</title>
+    <title>Weekly Board</title>
   </head>
   <body>
     <div id="root"></div>
-    <!-- ✅ use RELATIVE path, not /src/... -->
-    <script type="module" src="./src/weekly-site/main-weekly.jsx"></script>
+    <script type="module" src="/src/weekly-site/main.jsx"></script>
   </body>
 </html>
